Remove dependency on trino-main from TestConstraintExtractor